global-ingress/ingress.yaml
# /03-global-access/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tickget-ingress
  annotations:
    # 'default'는 Middleware가 생성된 네임스페이스입니다.
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-ticketing-prefix@kubernetescrd
spec:
  rules:
  - host: "tickget.kr"  # 또는 "api.tickget.kr" (DNS에 설정한 주소)
    http:
      paths:
      # --- Ticketing API v1 ---
      - path: /api/ticketing
        pathType: Prefix
        backend:
          service:
            name: ticketing-server-service # ticketing-server의 Service 이름
            port:
              number: 80
